[gd_scene load_steps=5 format=3 uid="uid://c1l5a53y8du8s"]

[ext_resource type="Script" path="res://scripts/pkmn choice.gd" id="1_m0itf"]
[ext_resource type="Texture2D" uid="uid://bu2gulnu4yaq5" path="res://assets/pokemon/treecko/front.png" id="2_1gqtk"]
[ext_resource type="Texture2D" uid="uid://ppvtn3efwkvx" path="res://assets/pokemon/mudkip/front.png" id="3_7g28n"]
[ext_resource type="Texture2D" uid="uid://dohtna0cj63ev" path="res://assets/pokemon/torchic/front.png" id="4_7wrk3"]

[node name="choice" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_m0itf")

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -196.0
offset_top = -32.0
offset_right = 4.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)
columns = 3

[node name="treecko" type="TextureButton" parent="GridContainer"]
texture_filter = 1
layout_mode = 2
texture_normal = ExtResource("2_1gqtk")

[node name="mudkip" type="TextureButton" parent="GridContainer"]
texture_filter = 1
layout_mode = 2
texture_normal = ExtResource("3_7g28n")

[node name="torchic" type="TextureButton" parent="GridContainer"]
texture_filter = 1
layout_mode = 2
texture_normal = ExtResource("4_7wrk3")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -176.0
offset_top = -108.5
offset_bottom = -85.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)
text = "Choose you're weapon"

[node name="Label2" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -36.0
offset_top = 108.5
offset_right = 4.0
offset_bottom = 131.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)
text = "or"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -47.0
offset_top = 224.5
offset_right = -1.0
offset_bottom = 255.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)
text = "Load"

[node name="side button right" type="Control" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 40.0
grow_horizontal = 0

[node name="Button2" type="Button" parent="side button right"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = 594.0
offset_top = -540.0
offset_right = 960.0
offset_bottom = -449.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 60
text = "Game Guide"

[node name="side button left" type="Control" parent="."]
layout_mode = 1
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Button3" type="Button" parent="side button left"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -1001.0
offset_top = -540.0
offset_right = -635.0
offset_bottom = -449.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 60
text = "ReadMe"

[connection signal="pressed" from="GridContainer/treecko" to="." method="_on_treecko_pressed"]
[connection signal="pressed" from="GridContainer/mudkip" to="." method="_on_mudkip_pressed"]
[connection signal="pressed" from="GridContainer/torchic" to="." method="_on_torchic_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_load_pressed"]
[connection signal="pressed" from="side button right/Button2" to="." method="guide"]
[connection signal="pressed" from="side button left/Button3" to="." method="Changelog"]
